--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
     <title>Adam Duchna</title>
+    <script type="module" crossorigin src="/assets/index.83ba2cc4.js"></script>
+    <link rel="stylesheet" href="/assets/index.fd38f54a.css">
   </head>
   <body>
     <canvas id="background"></canvas>
@@ -145,6 +147,6 @@
         <div class="empty-block"></div>
     </div>
     </main>
-    <script type="module" src="/main.js"></script>
+    
   </body>
 </html>
