--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    
     <title>Adam Duchna</title>
-    <script type="module" crossorigin src="./assets/index.83ba2cc4.js"></script>
-    <link rel="stylesheet" href="./assets/index.fd38f54a.css">
+    <script type="module" crossorigin src="/assets/index.83ba2cc4.js"></script>
+    <link rel="stylesheet" href="/assets/index.fd38f54a.css">
   </head>
   <body>
     <canvas id="background"></canvas>
@@ -145,6 +146,5 @@
         <div class="empty-block"></div>
     </div>
     </main>
-    
   </body>
 </html>
