--- a/index.html
+++ b/index.html
@@ -2,9 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@600&display=swap" rel="stylesheet">
+    <script type="module" src="./main.js"></script>
     <title>Adam Duchna</title>
   </head>
   <body>
@@ -145,6 +144,5 @@
         <div class="empty-block"></div>
     </div>
     </main>
-    <script type="module" src="/main.js"></script>
   </body>
 </html>
