--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <title>Adam Duchna</title>
     <script type="module" crossorigin src="/assets/index.68fccd53.js"></script>
-    <link rel="stylesheet" href="/assets/index.fd38f54a.css">
+    <link rel="stylesheet" href="/assets/index.f043cdd5.css">
   </head>
   <body>
     <canvas id="background"></canvas>
@@ -90,10 +90,11 @@
                 It creates classifiers based on TF-IDF(Term Frequency–Inverse Document Frequency) of words processed using NLTK Python library.
               </div>
             </a>
-            <a>Self-written Nonconvolutional Neural Network
+            <a href="https://github.com/AdamDuchna/BasicNeuralNetwork/blob/main/NonCononvolutionalNN.py">Self-written Nonconvolutional Neural Network
               <div class="description">
                 Non-convolutional Neural Network written in Python using numpy.
-                Based on gradient descent backward propagation algorithm and using ReLU activation function. 
+                Based on Sochastic Gradient Descent with Back-propagation and using sigmoid activation function.
+                Based on 3Blue1Brown Neural Networks series.
               </div>
             </a>
             </div>
@@ -135,6 +136,7 @@
             <div>adamduchna43@gmail.com</div>
           </div>
           <form action="https://api.web3forms.com/submit" method="POST">
+            <!--Should never really have your key written explicitly but this i basicly like an email adress so idc...-->
             <input type="hidden" name="access_key" value="cb985fae-c43f-4f06-9b97-9c84d5e3e9d5">
             <div>Full name</div>
             <input placeholder="John Kowalski" type="text" name="name" required>
