--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     
     <title>Adam Duchna</title>
     <script type="module" crossorigin src="/assets/index.de2a70a9.js"></script>
-    <link rel="stylesheet" href="/assets/index.f043cdd5.css">
+    <link rel="stylesheet" href="/assets/index.e2724ea7.css">
   </head>
   <body>
     <canvas id="background"></canvas>
@@ -31,14 +31,12 @@
         <div id="about">
           <div class="title">ABOUT</div>
           <div class="text">
-          Im a student in the final year of Informatics.
-          Throughout my studies, I've gained knowledge and practice in
-          multiple fields such as DevOps, FrontEnd, BackEnd and Data Science.
-          Obviously in 3 years I could not really master thoose fields
-          but I surely got to find my own niches and expand into them.
-          Currently my greatest interests are Computational Intelligence
-          and Frontend Development but in my free time I also enjoy Graphic Design
-          and 3D Modeling.
+            I'm a student in the final year of Informatics.
+            Throughout my studies, I've gained knowledge and practice in multiple fields
+            such as DevOps, FrontEnd, BackEnd, and Data Science. Obviously, in merely three years,
+            I could not really master those fields, but I definitely got to find my own niches and
+            expand into them. Currently, my leading interests are Computational Intelligence and
+            Frontend Development, but in my time off, I also enjoy Graphic Design and 3D Modeling.
           </div>
         </div>
         </div>
@@ -52,9 +50,9 @@
               <a href="https://github.com/AdamDuchna/GamesDatabase/tree/master/games_database_project">
                 Games database
                 <div class="description">
-                  Fully developed webapp, that contains games and their covers.
-                  The webapp is written in React and secured using keycloak as are all its API endpoints.
-                  Additionally all the elements were Dockerized and the whole project was deployed to a Kubernetes cluster.
+                  Fully developed web app, that contains games and their covers.
+                  This web app is written in React and secured using keycloak as are all its API endpoints.
+                  Additionally, all the elements were Dockerized and the whole project was deployed to a Kubernetes cluster.
                 </div>
               </a>
               <a href="https://github.com/AdamDuchna/ElectronicsForum/tree/master/projekt">
@@ -66,9 +64,9 @@
               </a>
               <a href="https://github.com/AdamDuchna/social_media_project">Social media app
                 <div class="description">
-                  Social media webapp that allows for posting photos and short videos.
-                  It also has profile customization, friends and followers.
-                  Created using React, Node.js and MongoDB. 
+                  Social media web app that allows for posting photos and short videos.
+                  It also has profile customization, friends, and followers.
+                  Created using React, Node.js, and MongoDB. 
                 </div>
               </a>
             </a>
@@ -86,15 +84,15 @@
               Fake news classification
               <div class="description">
                 Python program that focuses on classifying news
-                as either fake or real based on their title and content.
+                as either fake or real based on its title and content.
                 It creates classifiers based on TF-IDF(Term Frequency–Inverse Document Frequency) of words processed using NLTK Python library.
               </div>
             </a>
             <a href="https://github.com/AdamDuchna/BasicNeuralNetwork/blob/main/NonCononvolutionalNN.py">Self-written Nonconvolutional Neural Network
               <div class="description">
                 Non-convolutional Neural Network written in Python using numpy.
-                Based on Sochastic Gradient Descent with Back-propagation and using sigmoid activation function.
-                Based on 3Blue1Brown Neural Networks series.
+                Based on Stochastic Gradient Descent with Back-propagation and using the sigmoid activation function.
+                Based on 3Blue1Brown's Neural Networks series.
               </div>
             </a>
             </div>
