--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
     
     <title>Adam Duchna</title>
     <script type="module" crossorigin src="/assets/index.c4583575.js"></script>
-    <link rel="stylesheet" href="/assets/index.aba000b6.css">
+    <link rel="stylesheet" href="/assets/index.b637000d.css">
   </head>
   <body>
     <canvas id="background"></canvas>
     <main>
       <div class="name-wrapper">
       <div class="name" id="home">Adam Duchna</div>
+      <div class="mobile-arrow"></div>
       </div>
       <nav>
         <div id="home" class="options">
@@ -31,7 +32,7 @@
         <div id="about">
           <div class="title">ABOUT</div>
           <div class="text">
-            I'm a student in the final year of Informatics.
+            I'm a student in the final year of Computer Science.
             Throughout my studies, I've gained knowledge and practice in multiple fields
             such as DevOps, FrontEnd, BackEnd, and Data Science. Obviously, in merely three years,
             I could not really master those fields, but I definitely got to find my own niches and
@@ -88,11 +89,21 @@
                 It creates classifiers based on TF-IDF(Term Frequency–Inverse Document Frequency) of words processed using NLTK Python library.
               </div>
             </a>
-            <a href="https://github.com/AdamDuchna/BasicNeuralNetwork/blob/main/NonCononvolutionalNN.py">Self-written Nonconvolutional Neural Network
+            <a href="https://github.com/AdamDuchna/BasicNeuralNetwork/blob/main/NonCononvolutionalNN.py">
+              Self-written Nonconvolutional Neural Network
               <div class="description">
                 Non-convolutional Neural Network written in Python using numpy.
                 Based on Stochastic Gradient Descent with Back-propagation and using the sigmoid activation function.
                 Based on 3Blue1Brown's Neural Networks series.
+              </div>
+            </a>
+            <a>
+              SEO Tool [WIP]
+              <div class="description">
+                For my Bachelor's degree im working on a Search Engine Optimization Tool 
+                for Twitter that can help people and companies to find out who, when, and in what manner
+                are people talking about a certain topic. It can help both everyday people and companies to
+                find out more about something or to gain greater audience around their tweets.
               </div>
             </a>
             </div>
@@ -118,7 +129,7 @@
           </div>
           <div class="subsection">
           <div class="subsection-title">EDUCATION</div>
-          <div>Practical Informatics</div>
+          <div>Practical Computer Science</div>
           <div>University Of Gdańsk</div>
           <div>2020-2023</div>
           </div>
