--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
           <div class="text">
             I'm a student in the final year of Computer Science.
             Throughout my studies, I've gained knowledge and practice in multiple fields
-            such as DevOps, FrontEnd, BackEnd, and Data Science. Obviously, in merely three years,
+            such as DevOps, FrontEnd, BackEnd, and Computational Intelligence. Obviously, in merely three years,
             I could not really master those fields, but I definitely got to find my own niches and
             expand into them. Currently, my leading interests are Computational Intelligence and
             Frontend Development, but in my time off, I also enjoy Graphic Design and 3D Modeling.
@@ -46,22 +46,23 @@
           <div class="text">
             <div>FRONTEND</div>
             <div class="projects-list">
-              <a href="https://github.com/AdamDuchna/GamesDatabase/tree/master/games_database_project">
-                Games database
+              <a target="_blank" href="https://github.com/AdamDuchna/GamesDatabase/tree/master/games_database_project">
+                <div class="project-name"><div class="unwrap-arrow"></div>Games database</div>
                 <div class="description">
                   Fully developed web app, that contains games and their covers.
                   This web app is written in React and secured using keycloak as are all its API endpoints.
                   Additionally, all the elements were Dockerized and the whole project was deployed to a Kubernetes cluster.
                 </div>
               </a>
-              <a href="https://github.com/AdamDuchna/ElectronicsForum/tree/master/projekt">
-                Electonics forum
+              <a target="_blank" href="https://github.com/AdamDuchna/ElectronicsForum/tree/master/projekt">
+                <div class="project-name"><div class="unwrap-arrow"></div>Electonics forum</div>
                 <div class="description">
                   Online forum webiste with user roles, live website state update between users and login authorization.
                   Created using Redux, Node.js and MongoDB.
                 </div>
               </a>
-              <a href="https://github.com/AdamDuchna/social_media_project">Social media app
+              <a target="_blank" href="https://github.com/AdamDuchna/social_media_project">
+                <div class="project-name"><div class="unwrap-arrow"></div>Social media app</div>
                 <div class="description">
                   Social media web app that allows for posting photos and short videos.
                   It also has profile customization, friends, and followers.
@@ -72,31 +73,31 @@
             </div>
             <div>COMPUTATIONAL INTELLIGENCE</div>
             <div class="projects-list">
-            <a href="https://github.com/AdamDuchna/INF_Adam_Duchna_275035/tree/main/Projekt_Particle_Clustering">
-              Finding global minima for particle clusters
+            <a target="_blank" href="https://github.com/AdamDuchna/INF_Adam_Duchna_275035/tree/main/Projekt_Particle_Clustering">
+              <div class="project-name"><div class="unwrap-arrow"></div>Finding global minima for particle clusters</div>
               <div class="description">
                 Python program that solves the problem of finding energetic global minima for certain clusters of particles.
                 It uses two approaches Particle Swarm Optimization and Genetic Algorithm.
               </div>
             </a>
-            <a href="https://github.com/AdamDuchna/INF_Adam_Duchna_275035/tree/main/Projekt2_News_Classification">
-              Fake news classification
+            <a target="_blank" href="https://github.com/AdamDuchna/INF_Adam_Duchna_275035/tree/main/Projekt2_News_Classification">
+              <div class="project-name"><div class="unwrap-arrow"></div>Fake news classification</div>
               <div class="description">
                 Python program that focuses on classifying news
                 as either fake or real based on its title and content.
                 It creates classifiers based on TF-IDF(Term Frequency–Inverse Document Frequency) of words processed using NLTK Python library.
               </div>
             </a>
-            <a href="https://github.com/AdamDuchna/BasicNeuralNetwork/blob/main/NonCononvolutionalNN.py">
-              Self-written Nonconvolutional Neural Network
+            <a target="_blank" href="https://github.com/AdamDuchna/BasicNeuralNetwork/blob/main/NonCononvolutionalNN.py">
+              <div class="project-name"><div class="unwrap-arrow"></div>Self-written Nonconvolutional Neural Network</div>
               <div class="description">
                 Non-convolutional Neural Network written in Python using numpy.
                 Based on Stochastic Gradient Descent with Back-propagation and using the sigmoid activation function.
                 Based on 3Blue1Brown's Neural Networks series.
               </div>
             </a>
-            <a>
-              SEO Tool [WIP]
+            <a target="_blank">
+              <div class="project-name"><div class="unwrap-arrow"></div>SEO Tool [WIP]</div>
               <div class="description">
                 For my Bachelor's degree im working on a Search Engine Optimization Tool 
                 for Twitter that can help people and companies to find out who, when, and in what manner
